<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Saydaliyati</string>
    <string name="app_slogan">Trouvez les pharmacies près de chez vous, y compris celles de garde</string>
    <string name="app_version">Version 1.0</string>
    <string name="get_started">Commencer</string>
    <string name="authority_login">Connexion Admin</string>
    <string name="admin_dashboard">Tableau de Bord Admin</string>
    <string name="app_logo_description">Logo de l\'application</string>
    <string name="pharmacy_admin_login">Connexion Administrateur</string>

    <!-- Titles -->
    <string name="title_pharmacy_finder">Recherche de Pharmacies</string>
    <string name="title_admin_login">Connexion Administrateur</string>
    <string name="title_admin_dashboard">Tableau de Bord</string>
    <string name="title_add_pharmacy">Ajouter une Pharmacie</string>
    <string name="title_assign_guard_date">Assigner les Dates de Garde</string>

    <!-- General -->
    <string name="action_sign_in">Se Connecter</string>
    <string name="prompt_username">Nom d\'utilisateur</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="forgot_password">Mot de passe oublié?</string>
    <string name="error_field_required">Ce champ est requis</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_credentials">Identifiants incorrects</string>
    <!-- Settings -->
    <string name="settings">Paramètres</string>
    <string name="language_settings">Paramètres de langue</string>
    <string name="select_language">Sélectionnez la langue</string>
    <string name="french">Français</string>
    <string name="arabic">Arabe</string>
    <string name="save">Enregistrer</string>
    <string name="cancel">Annuler</string>
    <string name="settings_saved">Paramètres enregistrés</string>

    <!-- Notifications -->
    <string name="notifications">Notifications</string>
    <string name="enable_notifications">Activer les notifications</string>
    <string name="duty_pharmacy_notifications">Notifications pour pharmacies de garde</string>
    <string name="notify_before_hours">Notifier avant les heures de garde</string>
    <string name="notify_on_change">Notifier en cas de changement</string>
    <string name="pharmacy_on_duty">Pharmacie de garde</string>
    <string name="tomorrow">demain</string>
    <string name="in_one_hour">dans une heure</string>
    <string name="pharmacy_duty_notification">%1$s sera de garde %2$s</string>
    <string name="new_duty_pharmacy">Nouvelle pharmacie de garde</string>
    <string name="new_duty_pharmacy_notification">%1$s a été assignée de garde pour le %2$s</string>

    <string name="opening_map">Ouverture de la carte...</string>
</resources>